# neural_networks_research

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHIVING_CHECKLIST.md  ARC_AGI_INSIGHTS.md  CLAUDE.md  CODE_QUALITY_SETUP.md  CODE_RELIABILITY_GUIDE.md  COMPLETE_LITERATURE_INSIGHTS.md  CORE_INSIGHT_DISTRIBUTION_INVENTION.md  CRITICAL_OOD_INSIGHTS.md  DOCUMENTATION_INDEX.md  EXPERIMENT_CHECKLIST.md  FEEDBACK_INTEGRATION.md  IMMEDIATE_ACTION_PLAN.md  LITERATURE_REVIEW_SUMMARY.md  LITERATURE_TO_OOD_ILLUSION_MAPPING.md  MILESTONE_TIMELINE.md  NEXT_RESEARCH_DIRECTIONS.md  NEXT_STEPS.md  PAPERSPACE_TRAINING_GUIDE.md  PROJECT_ARCHIVING_PLAN.md  RESEARCH_REQUIREMENTS_DOCUMENT.md  SAFETY_PROTOCOLS.md  SAFETY_REVIEW_CHECKLIST.md  SCIENTIFIC_RESEARCH_WITH_CLAUDE.md  SETUP_GUIDE.md  TESTING_INFRASTRUCTURE_ANALYSIS.md  TTA_IMPLEMENTATION_GUIDE.md  activate_and_test.sh  archive_project.py  blog_post_imagination_vs_interpolation.md  check_environment.py  compositional_physics_results.json  distribution_invention_research_plan.md  mathematical_invention_results.json  proper_binding_model.npz  pyproject.toml  setup.py  setup_distribution_invention.md  (+3 more)
Research_proposals_feedback/: FEEDBACK.md  Latest Developments in Compositional Generalization and OOD Generalization (2023–2025).md  RESEARCH_PROPOSAL.md  literature_review_notes.md
archive/: ARCHIVE_LOG.json  README.md
archive/relocated_documents/: SCIENTIFIC_WRITING_NOTES.md
blog_posts/: evaluation_illusion_blog_post.md  layers_of_illusions_blog_post.md  ood_illusion_blog_post.md  variable_binding_as_distribution_invention.md  variable_binding_research_direction.md
data/arc/: sample_tasks.json
data/true_ood_physics/: constant_gravity_20250718_144011.pkl  height_dependent_physics_20250718_143713.pkl  minimal_summary_20250718_144011.pkl  rotating_frame_physics_20250718_143713.pkl  rotating_frame_physics_20250719_055907.pkl  spring_coupled_physics_20250718_143713.pkl  spring_coupled_physics_20250719_055907.pkl  standard_physics_20250718_143713.pkl  time_varying_gravity_20250718_144011.pkl  time_varying_physics_20250718_143713.pkl
evaluation/: analyze_physics_ood.py  true_ood_verifier.py
experiments/01_physics_worlds/: BASELINE_COMPARISON_RESULTS.md  BASELINE_EVALUATION_SUMMARY.md  COMPLETE_FINDINGS_SUMMARY.md  CURRENT_STATUS.md  DATA_ISOLATION_FIX_PLAN.md  EXPERIMENT_PLAN.md  GRAPHEXTRAP_SUCCESS_ANALYSIS.md  GRAPHEXTRAP_TRAINING_ANALYSIS.md  JAX_TTA_FIX_SUMMARY.md  MINIMAL_PINN_RESULTS.md  NEXT_RESEARCH_STEPS.md  NEXT_STEPS_TENSORFLOW_TRAINING.md  OOD_ILLUSION_PHYSICS_SUMMARY.md  PETTA_EXPERIMENT_RESULTS.md  PHYSICS_EXTRAPOLATION_SUMMARY.md  PINN_FAILURE_ANALYSIS.md  TRUE_OOD_BENCHMARK.md  TRUE_OOD_BENCHMARK_RESULTS.md  TRUE_OOD_IMPLEMENTATION_SUMMARY.md  TTA_BREAKTHROUGH_FINDINGS.md  TTA_COMPREHENSIVE_ANALYSIS.md  TTA_DECISION_SUMMARY.md  TTA_EVALUATION_SIZE_ANALYSIS.md  TTA_RESULTS_SUMMARY.md  TTA_TECHNICAL_APPENDIX.md  TTA_TESTING_SUMMARY.md  __init__.py  analyze_pinn_failure.py  analyze_representations.py  analyze_representations_knn.py  baseline_models_physics.py  baseline_training_progress.md  calculate_statistics.py  create_figure1_mechanism_shift.py  data_generator.py  diagnose_tta_zeros.py  distribution_invention_metrics.py  distribution_modifier.py  evaluate_baselines_simple.py  evaluate_baselines_time_varying.py  (+73 more)
experiments/02_compositional_language/: .gitignore  2025-07-23_findings_summary.md  ACTION_PLAN_POST_ANALYSIS.md  COMPREHENSIVE_RESULTS_ANALYSIS.md  COMPREHENSIVE_SCAN_LEARNINGS.md  ENHANCED_VALIDATION_SUMMARY.md  EXPERIMENT_PLAN.md  FINAL_BASELINE_RESULTS.md  FINAL_VALIDATION_CHECKLIST.md  FIX_TARGET_DATA_MISSING.md  IMPLEMENTATION_STATUS.md  LESSONS_LEARNED_VALIDATION.md  PAPERSPACE_READY.md  (+78 more)
ideas_to_read/: Test-Time Compute and Neural Search The New Frontier to AGI.md
models/: baseline_models.py  causal_rule_extractor_design.md  collision_models.py  meta_learning_framework.py  minimal_physics_model.py  mmd_loss.py  physics_informed_components.py  physics_informed_transformer.py  physics_losses.py  physics_simple_model.py  unified_evaluation.py
notebooks/: 01_initial_exploration.ipynb
research_diary/: 2025-01-09_research_diary.md  2025-01-11_research_diary.md  2025-01-14_pattern_library_update.md  2025-01-14_research_diary.md  2025-01-14_v9_solver_complete.md  2025-01-15_research_diary.md  2025-06-27_research_diary.md  2025-06-28_research_diary.md  2025-07-12_research_diary.md  2025-07-13_research_diary.md  2025-07-14_research_diary.md  2025-07-15_research_diary.md  2025-07-16_research_diary.md  2025-07-17_1_research_diary.md  2025-07-17_2_research_diary.md  2025-07-17_final_research_diary.md  2025-07-17_research_diary.md  2025-07-18_research_diary.md  2025-07-19_research_diary.md  2025-07-20_research_diary.md  2025-07-22_research_diary.md  2025-07-23_research_diary.md  2025-07-24_research_diary.md  2025-07-25_research_diary.md  2025-07-27_research_diary.md  2025-07-28_research_diary.md  2025-07-29_research_diary.md  2025-07-30_research_diary.md  2025-07-31_research_diary.md  2025-08-01_research_diary.md  2025-08-04_research_diary.md  2025-08-05_research_diary.md  2025-08-07_pattern_discovery_breakthrough.md  2025-08-07_research_diary.md  2025-08-08_research_diary.md  DIARY_TEMPLATE.md
scripts/: daily_merge.sh  format_all.sh  format_and_commit.sh  pre_commit_format.sh  pre_merge_tests.sh  setup_env.sh  smart_commit.sh  update_research_diary.sh
tests/: __init__.py  conftest.py  test_utils_config.py  test_utils_imports.py  test_utils_paths.py
utils/: __init__.py  config.py  imports.py  paths.py
(+599 files in other folders)
